--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,13 +39,62 @@
         </svg>
     </div>
   </div>
-  <div class="app-component__form">
-    <p> Form </p>
+  <div class="app-component__form pt-3 pb-3 d-flex flex-column justify-content-center align-items-center">
+    <h1>What do you think?</h1>
+    <form  [formGroup]="form" (ngSubmit)="submitForm()"
+        class="d-flex flex-column justify-content-center align-items-center col-sm-6 col-md-8">
+        <div class="form-group col-sm-6 col-md-8">
+            <label for="description">Description</label>
+            <textarea class="form-control" id="email" placeholder="Write something" formControlName="description">
+              </textarea>
+            <small id="descriptionHelp" class="form-text text-muted">Write down some of your impressions.</small>
+        </div>
+        <div class="p-0 col-sm-6 col-md-8 d-flex flex-column flex-sm-row justify-content-between align-items-center">
+            <div class="form-group col-sm-6 col-md-8 d-flex flex-column">
+                <label for="rating">Rating</label>
+                <ngb-rating (hover)="hovered=$event" (leave)="hovered=0"  formControlName="rating" max="5"></ngb-rating>
+            </div>
+            <div class="form-group col-sm-6 col-md-8 d-flex flex-column">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="checkbox" formControlName="newsLetter">
+                  <label class="form-check-label" for="checkbox">
+                    Receive newsletters
+                  </label>
+                </div>
+            </div>
+        </div>
+        <div class="form-group col-sm-6 col-md-8">
+            <label for="email">Email address (optional)</label>
+            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="example@mail.com" formControlName="email">
+            <small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else.</small>
+        </div>
+        <button type="submit" class="btn btn-secondary active" [disabled]="!form.valid">Submit</button>
+    </form>
   </div>
-  <div class="app-component__reviews">
-      <p>Reviews</p>
+  <div class="app-component__reviews pt-3 pb-3">
+      <h1>Reviews</h1>
   </div>
-  <div class="app-component__footer text-center">
-    <p> Footer</p>
+  <div class="app-component__footer p-3 d-flex flex-column justify-content-between align-items-lg-stretch">
+    <div class="pl-2 pr-2 d-flex flex-column flex-sm-row justify-content-center align-items-center justify-content-sm-between">
+        <div class="company col-6 aling-items-start">
+            <a class="btn btn-link font-weight-bold" href="https://eminds.ro">  E-MINDS </a>
+        </div>
+
+        <div class="contact-details col-12 col-sm-6 d-flex align-items-sm-start justify-content-between">
+            <p class="col-4 p-0">
+              Contact:
+            </p>
+            <div class="d-flex p-0 col-8 flex-column justify-content-center align-items-start ">
+                <a class="mb-0">
+                    iordache.mihaialexandru@gmail.com <i class="fas fa-envelope"></i></a>
+                <a>+40742696988 <i class="fas fa-phone"></i>  </a>
+            </div>
+        </div>
+
+    </div>
+
+      <div class="copyright">
+          © {{date | date: 'yyyy'}} | made with <i class="fa fa-heart heart"></i> by MihaI Iordache
+      </div>
   </div>
 </div>
