Review section init

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,19 @@
   <div class="app-component__landscape min-vh-100">
   </div>
   <div class="app-component__grid min-vh-100 d-flex flex-column flex-md-row flex-md-wrap">
-    <div class="grid-1 svg-container col-12 col-md-6 d-flex flex-fill justify-content-center align-items-center">
-        <div class="grid-bg-image">
-
+    <ngx-flip [flip]="flipDiv">
+        <div front class="grid-1 svg-container col-12 col-md-6 d-flex flex-fill justify-content-center align-items-center">
+            <div class="grid-bg-image">
+            </div>
+            <svg height="60" width="200" xmlns="http://www.w3.org/2000/svg" (click)="flipContent()">
+              <rect class="shape" height="60" width="200" />
+              <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle">about</text>
+            </svg>
         </div>
-        <svg height="60" width="200" xmlns="http://www.w3.org/2000/svg">
-          <rect class="shape" height="60" width="200" />
-          <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle">about</text>
-        </svg>
-    </div>
+        <div back>
+          <h2>Back flip</h2>
+        </div>
+    </ngx-flip>
     <div class="grid-2 svg-container col-12 col-md-6 d-flex flex-fill justify-content-center align-items-center">
         <div class="grid-bg-image">
 
@@ -44,17 +48,17 @@
     <form  [formGroup]="form" (ngSubmit)="submitForm()"
         class="d-flex flex-column justify-content-center align-items-center col-sm-6 col-md-8">
         <div class="form-group col-sm-6 col-md-8">
-            <label for="description">Description</label>
-            <textarea class="form-control" id="email" placeholder="Write something" formControlName="description">
+            <label for="message">Message</label>
+            <textarea class="form-control" id="message" placeholder="Write something" formControlName="message">
               </textarea>
-            <small id="descriptionHelp" class="form-text text-muted">Write down some of your impressions.</small>
+            <small id="messageHelp" class="form-text text-muted">Write down some of your impressions.</small>
         </div>
         <div class="p-0 col-sm-6 col-md-8 d-flex flex-column flex-sm-row justify-content-between align-items-center">
-            <div class="form-group col-sm-6 col-md-8 d-flex flex-column">
+            <div class="form-group col-sm-6 col-md-4 d-flex flex-column">
                 <label for="rating">Rating</label>
                 <ngb-rating (hover)="hovered=$event" (leave)="hovered=0"  formControlName="rating" max="5"></ngb-rating>
             </div>
-            <div class="form-group col-sm-6 col-md-8 d-flex flex-column">
+            <div class="form-group col-sm-6 col-md-4 d-flex flex-column">
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" id="checkbox" formControlName="newsLetter">
                   <label class="form-check-label" for="checkbox">
@@ -73,6 +77,14 @@
   </div>
   <div class="app-component__reviews pt-3 pb-3">
       <h1>Reviews</h1>
+      <div class="reviews-container d-flex flex-column flex-sm-row align-items-center flex-wrap justify-content-center justify-content-sm-between">
+        <div class="shadow-lg p-3 m-2 bg-white rounded col-12 col-sm-4 col-md-3 " *ngFor="let review of revies">
+          <img [src]="review.avatarUrl" alt="Avatar" class="avatar">
+          <p class="font-weight-bold">{{review.name}}</p>
+          <ngb-rating [(rate)]="review.rating" max="5" [readonly]="true"></ngb-rating>
+          <p>{{review.message}}</p>
+        </div>
+      </div>
   </div>
   <div class="app-component__footer p-3 d-flex flex-column justify-content-between align-items-lg-stretch">
     <div class="pl-2 pr-2 d-flex flex-column flex-sm-row justify-content-center align-items-center justify-content-sm-between">
