--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -86,10 +86,24 @@
 
   .app-component__reviews {
     background-color: #ffffff;
-    height: 300px;
+    max-height: 450px;
+    overflow-y: auto;
+
+    .reviews-container {
+      div {
+        margin: 1px;
+      }
+    }
 
     h1 {
       color: #000000;
+    }
+
+    .avatar {
+      vertical-align: middle;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
     }
   }
 
