--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,11 +21,8 @@
   .app-component__grid {
     overflow-x: hidden;
 
-    >div {
-      height: 501px;
-      padding: 0;
-      transition: transform 0.5s 0.4s;
-      &:hover {
+
+      .svg-container:hover {
         >div {
           filter: blur(3px);
           -webkit-filter: blur(3px);
@@ -35,14 +32,13 @@
           background-color: rgba(255, 255, 255, 0.8);
         }
       }
-    }
 
-    >div.fold:nth-child(odd) {
+    .left-column.fold {
       transform: translateX(-50%);
       transition: transform 0.5s 0s;
     }
 
-    >div.fold:nth-child(even) {
+    .right-column.fold {
       transform: translateX(50%);
       transition: transform 0.5s 0s;
     }
@@ -93,14 +89,6 @@
         height: 100%;
         width: 100%;
 
-      }
-    }
-
-    .middle-content {
-      visibility: hidden;
-
-      &.fold-content {
-        visibility: visible;
       }
     }
   }
