--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,16 +32,10 @@
           background-color: rgba(255, 255, 255, 0.8);
         }
       }
-
-    .left-column.fold {
-      transform: translateX(-50%);
-      transition: transform 0.5s 0s;
-    }
-
-    .right-column.fold {
-      transform: translateX(50%);
-      transition: transform 0.5s 0s;
-    }
+      .is-open {
+        z-index: 99;
+      }
+    
 
     svg {
       z-index: 2;
