--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,7 @@
       <h1 *ngIf="currentView === 'blog'">Blog</h1>
     </div>
 
-    <a class="cd-close" (click)="foldContent = !foldContent"></a>
+    <a class="cd-close" (click)="viewContent()"></a>
   </div>
   <div class="app-component__form pt-3 pb-3 d-flex flex-column justify-content-center align-items-center">
     <h1>What do you think?</h1>
